Use some more modern jdk features